Welcome to the NcX changelog

Changelog from 20230501 > 20230502:
• Fix: Settings force closing - SecSettings

Changelog from 20230401 > 20230501:
• Disable video stabilization in 60 fps mode, causes problems - Camera

On Update v1.0.0:
• Initial release