@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <OnOTAInfo>
   <RomName>NcX S21FE</RomName>
-  <VersionName>20230502 Update</VersionName>
-  <BuildNumber type="integer">20230502</BuildNumber>
-  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/m52xq-20230502/OTA-20230502-m52xq.zip</DownloadURL>
+  <VersionName>20230503 Update</VersionName>
+  <BuildNumber type="integer">20230503</BuildNumber>
+  <DownloadURL>https://github.com/ShaDisNX255/NcX_OnUpdate/releases/download/m52xq-20230503/OTA-20230503-m52xq.zip</DownloadURL>
   <AndroidVer>13</AndroidVer>
   <OneUIVer>5.1</OneUIVer>
-  <CheckMD5>5eaf94ddffafb430f7b0f75ee98bb930</CheckMD5>
-  <FileSize type="long">54025235</FileSize>
+  <CheckMD5>1a1abd94be653311b164e7b312aefadb</CheckMD5>
+  <FileSize type="long">52881284</FileSize>
   <WebsiteURL>https://forum.xda-developers.com/apps/magisk/dev-magisk-canary-channel-bleeding-edge-t3839337</WebsiteURL>
   <ChangelogHeader>https://i.ibb.co/92RxppQ/changelogheader1100.png</ChangelogHeader>
   <ChangelogURL>https://raw.githubusercontent.com/ShaDisNX255/NcX_OnUpdate/main/m52xq/changelog.txt</ChangelogURL>
